# test_project

./: .gitignore  Cargo.toml  flake.nix
.github/: renovate.json
.github/workflows/: generate-docs.yml  publish-crates.yml  publish-docs.yml  release-gui.yml  test-build-gui.yml  test-build-rest.yml  workflow-cli-lib.yml  workflow-rust.yml  workflow-tauri.yml
cli/: Cargo.toml  manifest.toml
cli/src/: main.rs  prompt.rs
docs/: crates.js  help.html  settings.html  src-files.js
docs/addr2line/: all.html  enum.LookupResult.html  fn.demangle.html  fn.demangle_auto.html  index.html  struct.Context.html  struct.Frame.html  struct.FrameIter.html  struct.FunctionName.html  struct.Location.html  struct.LocationRangeIter.html  struct.SplitDwarfLoad.html  trait.LookupContinuation.html
docs/adler/: all.html  fn.adler32_slice.html  index.html  struct.Adler32.html
docs/atk/: all.html  enum.CoordType.html  enum.Layer.html  enum.RelationType.html  enum.Role.html  enum.StateType.html  enum.TextAttribute.html  enum.TextBoundary.html  enum.TextClipType.html  enum.TextGranularity.html  enum.ValueType.html  index.html  struct.Action.html  struct.Attribute.html  struct.Component.html  struct.Document.html  struct.EditableText.html  struct.GObjectAccessible.html  struct.Hyperlink.html  struct.HyperlinkImpl.html  struct.HyperlinkStateFlags.html  struct.Hypertext.html  struct.Image.html  struct.Misc.html  struct.NoOpObject.html  struct.NoOpObjectFactory.html  struct.Object.html  struct.ObjectFactory.html  struct.Plug.html  struct.Range.html  struct.Rectangle.html  struct.Registry.html  struct.Relation.html  struct.RelationSet.html  struct.Selection.html  struct.Socket.html  struct.StateSet.html  struct.StreamableContent.html  struct.Table.html  struct.TableCell.html  (+8 more)
docs/atk_sys/: all.html  constant.ATK_HYPERLINK_IS_INLINE.html  constant.ATK_KEY_EVENT_LAST_DEFINED.html  constant.ATK_KEY_EVENT_PRESS.html  constant.ATK_KEY_EVENT_RELEASE.html  (+651 more)
docs/gdk/: all.html  (+165 more)
gui/: CHANGES.md  Cargo.toml  README.md  bun.lockb  vite.config.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
lib/: Cargo.toml  justfile
lib/src/: filehandler.rs  lib.rs  metadata.rs
lib/src/metadata/: buildsystem.rs  ide.rs  language.rs
util/: index.html
(+46366 files in other folders)
