[package]
name = "episko_cli"
version = "0.0.1"
authors = ["Simon Blum", "Ben Oeckl", "Paul Stöckle", "Maximilian Rodler"]
license = "MIT"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = "4.5.21"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
episko_lib = { path = "../lib" }
inquire = { version = "0.7.5", features = ["chrono"] }
color-eyre = "0.6.3"
